--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.13
   image_picker: ^0.8.5+2
-
+  math_expressions: ^2.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
